# AR-S

./: README.md
docs/modules/: agent.md  rotor.md
modules/agent/: main.cc
modules/agent/shell_controller/: CMakeLists.txt
modules/agent/shell_controller/include/: fd_handler.hh  proc_impl.hh  shell_controller.hh
modules/agent/shell_controller/src/: fd_handler.cc  shell_controller.cc
modules/deck/: CMakeLists.txt  main.cpp
modules/deck/lib/: json_network_manager.hpp  oauth2_device_flow.cpp  oauth2_device_flow.hpp
modules/deck/qml/: Main.qml  Theme.qml
modules/deck/sonar/: auth_manager.cpp  auth_manager.hpp  sonar_view_model.cpp  sonar_view_model.hpp
modules/magfield/: main.cpp
modules/sonar/: main.cpp
modules/sonar/include/adapters/: dbus_adapter.h
modules/sonar/src/adapters/: dbus_adapter.cpp
modules/sonar/src/providers/: github_provider.cpp
